--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -3,3 +3,8 @@
 <p> attraction.tickets </p>
 <%= link_to "Go on #{attraction.name}", attraction_path(attraction) %>
 <% end %>
+
+
+<% if @user.admin == true %>
+<%= link_to "New Attraction", new_attraction_path %>
+<% end %>
