--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -6,4 +6,8 @@
 <p>Happiness Rating: <%= @attraction.happiness_rating %></p>
 
 
-<%= link_to "Go on this ride", user_path(@user) %>
+<%= link_to "Go on this ride", user_path(session[:user_id]) %>
+
+
+
+<%= button_to "Go on this ride", user_path(session[:user_id]), :method => :get %>
