--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,7 @@
 
 <%= link_to "See attractions", attractions_path %>
 
-<%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %>
-  <input type=submit value='Log Out'>
-<% end %>
+
+
+
+<%= link_to 'Log Out', signout_path %>
