--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,11 +1,28 @@
-
 <h1>Attractions</h1>
 <% if current_user.admin %>
   <%= render partial: 'admin', locals: {attractions: @attractions} %>
-<% else %>
-  <ul>
-  <% @attractions.each do |attraction| %>
-    <li><%= link_to "Go on #{attraction.name}", attraction_path(attraction) %></li>
-  <% end %>
-  </ul>
-<% end %>
+  <% else %>
+    <table class="table">
+      <thead>
+        <tr>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td><strong>Name</strong></td>
+          <td><strong>Tickets</strong></td>
+          <td><strong>Details</strong></td>
+        </tr>
+    <% @attractions.each do |attraction| %>
+      <tr>
+        <td><%= attraction.name %></td>
+        <td><%= attraction.tickets %></td>
+        <td><%= link_to "Go on #{attraction.name}", attraction_path(attraction) %></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<br>
