--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @attraction.name %></h1>
-Total Number of Users:<%= @attraction.users.count %>
+Total Number of Users: <%= @attraction.users.count %><br />
 Tickets Requirement: <%= @attraction.tickets %><br />
 Nausea Rating: <%= @attraction.nausea_rating %><br />
 Happiness Rating: <%= @attraction.happiness_rating %><br />
