--- a/app/views/attractions/_admin.html.erb
+++ b/app/views/attractions/_admin.html.erb
@@ -1,6 +1,18 @@
-<ul>
-<% attractions.each do |attraction| %>
-  <li><%= link_to "Show #{attraction.name}", attraction_path(attraction) %></li>
+<table class="table">
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><strong>Attraction Name</strong></td>
+    </tr>
+      <% @attractions.each do |attraction| %>
+      <tr>
+      <td><%= link_to "Show #{attraction.name}", attraction_path(attraction) %></td>
+      </tr>
 <% end %>
-</ul>
-<%= link_to "New Attraction", new_attraction_path %>
+<%= link_to "Add New Attraction", new_attraction_path %>
+</tbody>
+</table>
