--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,22 @@
 
 <h1>Sign Up</h1>
 <%= form_for @user do |f| %>
+<div class="form-group">
 <%= f.label :name %>
-<%= f.text_field :name %><br />
-<%= f.label :height %>
-<%= f.number_field :height %><br />
-<%= f.label :happiness %>
-<%= f.number_field :happiness %><br />
-<%= f.label :nausea %>
-<%= f.number_field :nausea %><br />
-<%= f.label :tickets %>
-<%= f.number_field :tickets %><br />
+<%= f.text_field :name, class: "form-control" %><br />
+<%= f.label :height, "Height (in inches)" %>
+<%= f.number_field :height, class: "form-control" %><br />
+<%= f.label :happiness, "How happy are you? (1-5 scale)" %>
+<%= f.number_field :happiness, class: "form-control" %><br />
+<%= f.label :nausea, "How nauseous are you?(1-5 scale)" %>
+<%= f.number_field :nausea, class: "form-control" %><br />
+<%= f.label :tickets, "How many dollas in ya pocket?"%>
+<%= f.number_field :tickets, class: "form-control"  %><br />
 <%= f.label :password %>
-<%= f.password_field :password %><br />
-<p>Theme Park Owner?<%= f.check_box :admin, options = {:class => "user_admin"} %></p><br />
-  <br />
-<%= f.submit %>
+<%= f.password_field :password, class: "form-control" %><br />
+<%= f.label :admin, "Check box if you are a theme park owner" %>
+<%= f.check_box :admin, class: "form-check-input" %><br />
+<br />
+<%= f.submit class: "btn btn-primary" %>
+</div>
 <% end %>
