--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,5 +6,5 @@
     <%= f.number_field :height %>
     <%= f.number_field :tickets %>
     <%= f.check_box :admin %>
-    <%= f.submit %>
+    <%= f.submit "Create User" %>
 <%end%>
