--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
-<% form_for @user do |f| %>
+<%= form_for @user do |f| %>
     <%= f.text_field :name %>
-    <%= f.text_field :password_digest %>
+    <%= f.text_field :password %>
     <%= f.number_field :happiness %>
     <%= f.number_field :nausea %>
     <%= f.number_field :height %>
