--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,14 @@
+    <% if @user.admin == true %>
+        ADMIN
+    <%end%>
+    
     <%= @user.name %>
     Mood: <%= @user.mood %>
     Nasuea: <%= @user.nausea %>
     Height: <%= @user.height %>
     Tickets: <%= @user.tickets %>
+    <div>
+        <%= link_to "See attractions", attractions_path %>
+        <%= link_to "Log Out", logout_path %>
+    </div>
+
