--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -4,6 +4,11 @@
     Min Height: <%= @attraction.min_height %>
     Tickets: <%= @attraction.tickets %>
 
+
+<%= form_for @ride, :url => { :action => @ride.take_ride } do |f| %>
+  <%= f.button('Go on this ride') %>
+<% end %>
+
     <div>
         <<%= link_to 'Edit Attraction', edit_attraction_path(@attraction) %>>
     </div>
