--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,11 @@
     <% if @user.admin == true %>
         ADMIN
     <%end%>
+
+    <% if flash[:alert] %>
+        <%= flash[:alert] %>
+        <% flash[:alert] = nil %>
+    <%end%>
     
     <%= @user.name %>
     Mood: <%= @user.mood %>
