--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
     <% if @user.admin == true %>
         ADMIN
     <%end%>
-
-    <% if flash[:alert] %>
-        <%= flash[:alert] %>
-        <% flash[:alert] = nil %>
+    
+    <% if @message %>
+    <%binding.pry%>
+        <%= @message %>
     <%end%>
     
     <%= @user.name %>
