--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,8 @@
     <% if @user.admin == true %>
         ADMIN
     <%end%>
-    
+
+        <%binding.pry%>
     <% if @message %>
     <%binding.pry%>
         <%= @message %>
