--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,8 @@
         ADMIN
     <%end%>
 
-        <%binding.pry%>
-    <% if @message %>
-    <%binding.pry%>
-        <%= @message %>
+    <% if session[:message] %>
+        <%= session[:message] %>
     <%end%>
     
     <%= @user.name %>
