--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,10 +12,7 @@
     <% end %>
 
 Mood: <%= @user.mood %>
-    
-    <% if !@message.nil? %> 
-    <%binding.pry%>
-    <%= @message  %>  
-    <% end %>
+
+    <%= flash[:alert] if flash[:alert] %>  
 
 <%= link_to "Log Out", '/logout' %>
