--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,5 +1,10 @@
 <%= Attraction.all.each do |x|%>
-<%= link_to "Go on #{x.name}", attraction_path(x) %>
+<%= link_to "Go on #{x.name}", attraction_path(x) if current_user.admin == false %>
+<%= link_to "Show #{x.name}", attraction_path(x) %>
 <%end%>
+
+<%= link_to "New Attraction", new_attraction_path %>
+
+
 
 
